--- a/Project.ipynb
+++ b/Project.ipynb
@@ -6675,7 +6675,6 @@
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
-    "# Create an instance of TfidfVectorizer\n",
     "tfidf_vect = TfidfVectorizer(analyzer='word', token_pattern=r'\\w{1,}')\n",
     "\n",
     "# Fit the vectorizer to the unique text data\n",
@@ -6685,11 +6684,9 @@
     "train_review = tfidf_vect.transform(data['review'].values)\n",
     "test_review = tfidf_vect.transform(dftest['review'].values)\n",
     "\n",
-    "# Extract the target labels\n",
     "labels = data['sentiment'].values\n",
     "labels_test = dftest['sentiment'].values\n",
     "\n",
-    "# Set the transformed data and labels\n",
     "X = train_review\n",
     "y = labels\n",
     "\n",
@@ -6702,19 +6699,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here is what we did: we used the TfidfVectorizer class from the scikit-learn library. This class takes in text data and performs two main operations: building the vocabulary and transforming the text into TF-IDF vectors.\n",
+    "We used the TfidfVectorizer class from the scikit-learn. we build the vocabulary and transform the text into TF-IDF vectors.\n",
     "\n",
-    "First, we created an instance of TfidfVectorizer with specific parameters, such as setting the analyzer to 'word' to consider words as the basic units for analysis.\n",
+    "First, we created an instance of TfidfVectorizer.\n",
     "\n",
-    "Next, we applied the fit method on the TfidfVectorizer instance, passing the unique text data (pd.concat([data['review']]).unique()) as input. This step built the vocabulary by learning the mapping between words and numerical indices.\n",
+    "Next, we applied the fit method on the TfidfVectorizer instance.\n",
     "\n",
-    "After building the vocabulary, we applied the transform method on the TfidfVectorizer instance to convert the text data into TF-IDF vectors. We separately transformed both the training data (data['review'].values) and the test data (dftest['review'].values).\n",
+    "After building the vocabulary, we applied the transform method on the TfidfVectorizer instance to convert the text data into TF-IDF vectors.\n",
     "\n",
-    "Additionally, we extracted the sentiment labels from the original dataset (data['sentiment'].values) and the test dataset (dftest['sentiment'].values), storing them as labels and labels_test, respectively.\n",
+    "We also extracted the sentiment labels from the original dataset.\n",
     "\n",
-    "Finally, we assigned the transformed data and labels to X, y, X_test, and y_test, which would be used for further analysis or model training and testing.\n",
-    "\n",
-    "In summary, the code processed the text data using the TF-IDF technique, creating numerical representations that capture the importance of words in each document while considering their occurrence across the entire dataset. These representations enable the analysis and modeling of sentiment in the given dataset."
+    "And we assigned the transformed data and labels to X, y, X_test, and y_test, which would be used for further analysis or model training and testing."
    ]
   },
   {
@@ -6843,7 +6838,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The outcome indicates that the logistic regression model achieved high scores on the training, validation, and testing sets, with F1-scores ranging from 0.8906 to 0.9338. The classification report shows that the model performs well for both classes (0 and 1), with high precision, recall, and F1-scores for each class. This suggests that the model is effective at predicting sentiment labels and demonstrates good generalization to unseen data."
+    "We see that our TF-IDF model achieved high scores on the training, validation, and testing sets, with F1-scores ranging from 0.8906 to 0.9338. The classification report shows that the model performs well for both classes (positve and negative predictions), with high precision, recall, and F1-scores for each class. This suggests that the model is effective at predicting sentiment labels and demonstrates good generalization to unseen data."
    ]
   },
   {
@@ -6876,7 +6871,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "this classification report provides an in-depth evaluation of the model's performance on the validation set. It demonstrates that the model achieves similar precision, recall, and F1-score for both classes, indicating a balanced performance. The high accuracy and balanced metrics suggest that the model is effective in predicting sentiment labels for the validation data."
+    "We see that the model also achieves similar precision, recall, and F1-score for our validation set, indicating a balanced performance. The high accuracy and balanced metrics suggest that the model is effective in predicting sentiment labels for the validation data."
    ]
   },
   {
